--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 body {
-  height: 100vh;
+  min-height: 100dvh;
   background-image: linear-gradient(
     to left,
     rgb(37, 199, 199),
